feature: getBy method returns Optional